some messy stuffs are added at the end of the notebook.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -8790,6 +8790,432 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestOutput.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestOutput.java\n",
+    "\n",
+    "import java.io.*;\n",
+    "\n",
+    "public class TestOutput {\n",
+    "\n",
+    "\tpublic static void main(String[] args) throws IOException {\n",
+    "\t\tString astring=\"this is a string\";\n",
+    "\t\tFileOutputStream aFile = new FileOutputStream(\"c:/temp/test2.txt\");\n",
+    "        \n",
+    "       while ((data=aFile.read())!=-1){\n",
+    "          //System.out.print((char)astring);\n",
+    "          aFile.write((char)astring);\n",
+    "       }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TestOutput.java:10: error: cannot find symbol\n",
+      "       while ((data=aFile.read())!=-1){\n",
+      "               ^\n",
+      "  symbol:   variable data\n",
+      "  location: class TestOutput\n",
+      "TestOutput.java:10: error: cannot find symbol\n",
+      "       while ((data=aFile.read())!=-1){\n",
+      "                         ^\n",
+      "  symbol:   method read()\n",
+      "  location: variable aFile of type FileOutputStream\n",
+      "TestOutput.java:12: error: incompatible types: String cannot be converted to char\n",
+      "          aFile.write((char)astring);\n",
+      "                            ^\n",
+      "3 errors\n",
+      "錯誤: 找不到或無法載入主要類別 TestOutput\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestOutput.java\n",
+    "!java TestOutput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "package tw.leonchen.myproject.oop.io;\n",
+    "\n",
+    "import java.io.BufferedInputStream;\n",
+    "import java.io.BufferedOutputStream;\n",
+    "import java.io.FileInputStream;\n",
+    "import java.io.FileOutputStream;\n",
+    "import java.io.IOException;\n",
+    "\n",
+    "public class TestBufferedStreamIOEx1 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) throws IOException {\n",
+    "\t\tFileInputStream fis1 = new FileInputStream(\"c:/temp/test/hello.txt\");\n",
+    "\t\tBufferedInputStream bis1 = new BufferedInputStream(fis1);\n",
+    "\t\t\n",
+    "\t\tBufferedInputStream bis1 = new BufferedInputStream(new FileInputStream(\"c:/temp/test/hello.txt\"));\n",
+    "\t\t\n",
+    "\t\tFileOutputStream fos1 = new FileOutputStream(\"c:/temp/test/copyDest.txt\");\n",
+    "\t\tBufferedOutputStream bos1 = new BufferedOutputStream(fos1);\n",
+    "\t\t\n",
+    "\t\tint data;\n",
+    "\t\twhile((data=bis1.read())!=-1){\n",
+    "\t\t\tSystem.out.println((char)data);\n",
+    "\t\t\tbos1.write(data);\n",
+    "\t\t\t//bos1.flush();\n",
+    "\t\t}\n",
+    "\t\tbos1.flush();\n",
+    "\t\t\n",
+    "\t\tbos1.close();\n",
+    "\t\tfos1.close();\n",
+    "\t\tbis1.close();\n",
+    "\t\tfis1.close();\n",
+    "\n",
+    "\t}\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestBufferedStreamIOEx2.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestBufferedStreamIOEx2.java\n",
+    "import java.io.BufferedReader;\n",
+    "import java.io.BufferedWriter;\n",
+    "import java.io.FileReader;\n",
+    "import java.io.FileWriter;\n",
+    "\n",
+    "import java.io.IOException;\n",
+    "\n",
+    "public class TestBufferedStreamIOEx2 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) throws IOException {\n",
+    "\t\tBufferedReader br1 = new BufferedReader(new FileReader(\"c:/temp/hello.txt\"));\n",
+    "\t\tBufferedWriter br2 = new BufferedWriter(new FileWriter(\"c:/temp/hello_output.txt\"));\n",
+    "\t\tString data[]=new String[3];\n",
+    "\n",
+    "\t\tfor(int i=0;i<3;i++){\n",
+    "\n",
+    "            data[i]=br1.readLine();\n",
+    "\t\t\tSystem.out.println(data[i]);\n",
+    "            //br2.newLine();\n",
+    "\t\t}\n",
+    "        br2.close();\n",
+    "        br1.close();\n",
+    "        \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is\n",
+      "my file\n",
+      "at the desktop\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestBufferedStreamIOEx2.java\n",
+    "!java TestBufferedStreamIOEx2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing TestBufferedStreamIOEx3.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.io.BufferedReader;\n",
+    "import java.io.BufferedWriter;\n",
+    "import java.io.InputStreamReader;\n",
+    "import java.io.FileReader;\n",
+    "import java.io.FileWriter;\n",
+    "import java.io.InputStream;\n",
+    "import java.io.IOException;\n",
+    "\n",
+    "public class TestBufferedStreamIOEx3 {\n",
+    "\n",
+    "    public static void main(String[] args) throws IOException {\n",
+    "        InputStream istream= System.in;\n",
+    "        BufferedReader br1 = new BufferedReader(new InputStreamReader(istream));\n",
+    "        String data;\n",
+    "        while((data=br1.readLine())!=null){\n",
+    "            System.out.println(data);\n",
+    "            if(data.equalsIgnoreCase(\"Q\")){System.exit(-1);}\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestThreadEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestThreadEx1.java\n",
+    "class TestThreadEx1 implements Runnable{\n",
+    "\n",
+    "\t@Override\n",
+    "\tpublic void run() {\n",
+    "        long threadId = Thread.currentThread().getId();\n",
+    "\t\tfor(int i=1;i<=10;i++){\n",
+    "\t\t\tSystem.out.println(\"threadId=\"+threadId+\" i=\" + i);\n",
+    "\t\t}\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "public class CallTestThreadEx1 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tTestThreadEx1 test1 = new TestThreadEx1();\n",
+    "\t\tThread thread1 = new Thread(test1);\n",
+    "\t\tThread thread2 = new Thread(test1);\n",
+    "\t\tthread1.start();\n",
+    "\t\tthread2.start();\n",
+    "\t\tSystem.out.println(\"finished\");\n",
+    "\t}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished\n",
+      "threadId=12 i=1\n",
+      "threadId=11 i=1\n",
+      "threadId=12 i=2\n",
+      "threadId=11 i=2\n",
+      "threadId=12 i=3\n",
+      "threadId=11 i=3\n",
+      "threadId=12 i=4\n",
+      "threadId=11 i=4\n",
+      "threadId=12 i=5\n",
+      "threadId=11 i=5\n",
+      "threadId=12 i=6\n",
+      "threadId=11 i=6\n",
+      "threadId=12 i=7\n",
+      "threadId=11 i=7\n",
+      "threadId=12 i=8\n",
+      "threadId=11 i=8\n",
+      "threadId=12 i=9\n",
+      "threadId=11 i=9\n",
+      "threadId=12 i=10\n",
+      "threadId=11 i=10\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac CallTestThreadEx1.java\n",
+    "!java CallTestThreadEx1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestThreadEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestThreadEx1.java\n",
+    "class TestThreadEx1 implements Runnable{\n",
+    "\n",
+    "\t@Override\n",
+    "\tpublic void run() {\n",
+    "\t\tfor(int i=1;i<=10;i++){\n",
+    "\t\t\tSystem.out.println(Thread.currentThread().getName() + \" i=\" + i);\n",
+    "\t\t\ttry {\n",
+    "\t\t\t\tThread.sleep(1000);\n",
+    "\t\t\t} catch (InterruptedException e) {\n",
+    "\t\t\t\te.printStackTrace();\n",
+    "\t\t\t}\n",
+    "\t\t}\n",
+    "\t}\n",
+    "\t\n",
+    "}\n",
+    "\n",
+    "public class CallTestThreadEx1 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tTestThreadEx1 test1 = new TestThreadEx1();\n",
+    "\t\tThread thread1 = new Thread(test1,\"kitty\");\n",
+    "\t\tThread thread2 = new Thread(test1,\"mario\");\n",
+    "\t\tthread1.start();\n",
+    "\t\tthread2.start();\n",
+    "\t\ttry {\n",
+    "\t\t\tthread1.join();\n",
+    "\t\t} catch (InterruptedException e) {\n",
+    "\t\t\te.printStackTrace();\n",
+    "\t\t}\n",
+    "\t\tSystem.out.println(\"finished\");\n",
+    "\t}\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kitty i=1\n",
+      "mario i=1\n",
+      "mario i=2\n",
+      "kitty i=2\n",
+      "mario i=3\n",
+      "kitty i=3\n",
+      "kitty i=4\n",
+      "mario i=4\n",
+      "mario i=5\n",
+      "kitty i=5\n",
+      "mario i=6\n",
+      "kitty i=6\n",
+      "kitty i=7\n",
+      "mario i=7\n",
+      "kitty i=8\n",
+      "mario i=8\n",
+      "kitty i=9\n",
+      "mario i=9\n",
+      "kitty i=10\n",
+      "mario i=10\n",
+      "finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac CallTestThreadEx1.java\n",
+    "!java CallTestThreadEx1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8814,9 +9240,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
