--- a/BDSE03_Vortrag.ipynb
+++ b/BDSE03_Vortrag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -271,9 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -393,18 +393,21 @@
       "p\n",
       "{u'class': [u'title']}\n",
       "[u'title']\n",
+      "<type 'unicode'>\n",
       "The Dormouse's story\n",
       "===================================================================================================\n",
       "<p class=\"story\">Once upon a time there were three little sisters; and their names were</p>\n",
       "p\n",
       "{u'class': [u'story']}\n",
       "[u'story']\n",
+      "<type 'unicode'>\n",
       "Once upon a time there were three little sisters; and their names were\n",
       "===================================================================================================\n",
       "<p class=\"story\">...</p>\n",
       "p\n",
       "{u'class': [u'story']}\n",
       "[u'story']\n",
+      "<type 'unicode'>\n",
       "...\n",
       "===================================================================================================\n"
      ]
@@ -416,6 +419,7 @@
     "    print tag.name\n",
     "    print tag.attrs\n",
     "    print tag[\"class\"]\n",
+    "    print type(tag[\"class\"][0])\n",
     "    print tag.string\n",
     "    print \"===================================================================================================\""
    ]
@@ -701,8 +705,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's see its descendants:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -712,6 +723,7 @@
      "output_type": "stream",
      "text": [
       "body\n",
+      "<type 'generator'>\n",
       "\n",
       "\n",
       "<p class=\"title\"><b>The Dormouse's story</b></p>\n",
@@ -740,35 +752,22 @@
    ],
    "source": [
     "print soup.body.name\n",
+    "print type(soup.body.descendants)\n",
     "\n",
     "for child in soup.body.descendants:\n",
     "    print child"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<type 'generator'>\n",
-      "The Dormouse's story\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print type(soup.p.strings)\n",
-    "print soup.p.string"
+    "idea: to get all the strings of all the \"p\" tags:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -777,13 +776,223 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Dormouse's story\n"
+      "<b>The Dormouse's story</b>\n",
+      "Once upon a time there were three little sisters; and their names were\n",
+      "...\n"
      ]
     }
    ],
    "source": [
-    "for str in soup.p.strings:\n",
-    "    print str"
+    "for single_tag in soup.find_all(\"p\"):\n",
+    "    for string in single_tag:\n",
+    "        print string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, not sure if this will be useful. Anyway, let's move on first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I now have the problem about the type \"generator\". I'd like to understand both the types \"generator\" and \"iterator\" in Python better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'method-wrapper'>\n",
+      "<type 'method-wrapper'>\n",
+      "<type 'method-wrapper'>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute '__iter__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-02efa174793f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__iter__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute '__iter__'"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "b=123\n",
+    "print type(a.__iter__)\n",
+    "print type(a.__init__)\n",
+    "print type(b.__init__)\n",
+    "print type(b.__iter__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">When Python executes the for loop, it first invokes the $__iter__()$ method of the container to get the iterator of the container. It then repeatedly calls the next() method ($__next__()$ method in Python 3.x) of the iterator until the iterator raises a StopIteration exception. Once the exception is raised, the for loop ends."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which means that a list is iterable. More details see: http://www.shutupandship.com/2012/01/understanding-python-iterables-and.html\n",
+    "\n",
+    "Let's quote the summary from that site (written by Praveen Gollakota):\n",
+    ">If you define a custom container class, think about whether it should also be an iterable. \n",
+    "It is quite easy to make a class support the iterator protocol. \n",
+    "Doing so will make the syntax more natural.\n",
+    "\n",
+    "If I can't recall what the above summary says or how to make a class iterable in the future, I'll visit that website again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's continue. What is a generator in Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Using the generator pattern (an iterable)\n",
+    "class firstn(object):\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "        self.num, self.nums = 0, []\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    # Python 3 compatibility\n",
+    "    def __next__(self):                  # Okay, I knew this. In Python3 one should be using __next__.\n",
+    "        return self.next()\n",
+    "    def next(self):\n",
+    "        if self.num < self.n:\n",
+    "            cur, self.num = self.num, self.num+1\n",
+    "            return cur\n",
+    "        else:\n",
+    "            raise StopIteration()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.firstn'>\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print type(firstn(3))\n",
+    "for j in firstn(3):\n",
+    "    print j\n",
+    "print\n",
+    "a=firstn(3)\n",
+    "for _ in range(3):\n",
+    "    print a.next()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, this I understand. The above is nothing but the concept of the iterator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "> (https://wiki.python.org/moin/Generators)\n",
+    "\n",
+    ">Python provides generator functions as a convenient shortcut to building iterators. Lets us rewrite the above iterator as a generator function: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def firstn(n):\n",
+    "    num = 0\n",
+    "    while num < n:\n",
+    "        yield num\n",
+    "        num += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=firstn(3)\n",
+    "for a in firstn(3):\n",
+    "    print a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I got it. In this way, the iterator can be built easier. That's it. I think 1) the design pattern of the generator is simpler than the design pattern of the iterator. 2) their behave should be the same."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, due to the string we have got has a special type (NavigableString), we can find the direct parent of these special strings."
    ]
   },
   {
@@ -812,8 +1021,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's see if we can print out all the strings of the site:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -825,55 +1041,299 @@
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u\"The Dormouse's story\"\n",
       "The Dormouse's story\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u\"The Dormouse's story\"\n",
       "The Dormouse's story\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'Once upon a time there were three little sisters; and their names were'\n",
       "Once upon a time there were three little sisters; and their names were\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'Elsie'\n",
       "Elsie\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u',\\n'\n",
       ",\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'Lacie'\n",
       "Lacie\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u' and\\n'\n",
       " and\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'Tillie'\n",
       "Tillie\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u';\\nand they lived at the bottom of a well.'\n",
       ";\n",
       "and they lived at the bottom of a well.\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
       "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'...'\n",
       "...\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n",
       "u'\\n'\n",
       "\n",
-      "\n"
+      "\n",
+      "<class 'bs4.element.NavigableString'>\n",
+      "======================================\n"
      ]
     }
    ],
    "source": [
     "for string in soup.strings:\n",
     "    print(repr(string))\n",
-    "    print((string))"
+    "    print((string))\n",
+    "    print(type(string))\n",
+    "    print\"======================================\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or the stripped strings(unnecessary spaces are removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\"The Dormouse's story\"\n",
+      "u\"The Dormouse's story\"\n",
+      "u'Once upon a time there were three little sisters; and their names were'\n",
+      "u'Elsie'\n",
+      "u','\n",
+      "u'Lacie'\n",
+      "u'and'\n",
+      "u'Tillie'\n",
+      "u';\\nand they lived at the bottom of a well.'\n",
+      "u'...'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for string in soup.stripped_strings:\n",
+    "    print(repr(string))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Siblings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      " <body>\n",
+      "  <a>\n",
+      "   <b>\n",
+      "    text1\n",
+      "   </b>\n",
+      "   <c>\n",
+      "    text2\n",
+      "   </c>\n",
+      "  </a>\n",
+      " </body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
+   "source": [
+    "sibling_soup = BeautifulSoup(\"<a><b>text1</b><c>text2</c></b></a>\",\"lxml\")\n",
+    "print(sibling_soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<c>text2</c>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print sibling_soup.b.next_sibling\n",
+    "print sibling_soup.b.previous_sibling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<b>text1</b>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print sibling_soup.c.next_sibling\n",
+    "print sibling_soup.c.previous_sibling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "back to the soup example. Let's find the siblings of the tag \"a\" in an iterating way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print type(soup.a.next_siblings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "apparently, it is a generator. So, we can do the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u',\\n'\n",
+      "<a class=\"sister\" href=\"http://example.com/lacie\" id=\"link2\">Lacie</a>\n",
+      "u' and\\n'\n",
+      "<a class=\"sister\" href=\"http://example.com/tillie\" id=\"link3\">Tillie</a>\n",
+      "u';\\nand they lived at the bottom of a well.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sibling in soup.a.next_siblings:\n",
+    "    print(repr(sibling))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "html_doc = \"\"\"\n",
+    "<html><head><title>The Dormouse's story</title></head>\n",
+    "<body>\n",
+    "<p class=\"title\"><b>The Dormouse's story</b></p>\n",
+    "\n",
+    "<p class=\"story\">Once upon a time there were three little sisters; and their names were\n",
+    "<a href=\"http://example.com/elsie\" class=\"sister\" id=\"link1\">Elsie</a>,\n",
+    "<a href=\"http://example.com/lacie\" class=\"sister\" id=\"link2\">Lacie</a> and\n",
+    "<a href=\"http://example.com/tillie\" class=\"sister\" id=\"link3\">Tillie</a>;\n",
+    "and they lived at the bottom of a well.</p>\n",
+    "\n",
+    "<p class=\"story\">...</p>\n",
+    "\"\"\"\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(html_doc, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1994,6 +2454,18 @@
    "display_name": "Python [Root]",
    "language": "python",
    "name": "Python [Root]"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
