minor update. This notebook is still a mess.

--- a/Web_Crawling_Basics.ipynb
+++ b/Web_Crawling_Basics.ipynb
@@ -2035,7 +2035,7 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2179,9 +2179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "31.10.2016\n",
+    "#### 31.10.2016\n",
     "\n",
-    "What I've done today: the \"urllib2\" package seems buggy and will request wrong pages. Use the \"requests\" (which uses the \"urllib3\") package instead."
+    "What I've done today: the \"urllib2\" package seems buggy and will request pages which are out of date. Let's use the \"requests\" (which uses the \"urllib3\") package instead."
    ]
   },
   {
