--- a/BDSE03-Vortrag-HighlightedCodes.ipynb
+++ b/BDSE03-Vortrag-HighlightedCodes.ipynb
@@ -9,8 +9,8 @@
     "    \n",
     "    public static void main(String args[]){\n",
     "        \n",
-    "        int array[]={1,2,3,4,5,6,7,8,9,10};\n",
-    "\n",
+    "        int array[]={0,1,2,3,4,5,6,7,8,9};\n",
+    "    \n",
     "        for(int element:array){\n",
     "            System.out.println(element);\n",
     "        }\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -30,6 +30,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Overwriting EnhancedDoLoopTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file EnhancedDoLoopTest.java\n",
+    "public class EnhancedDoLoopTest{\n",
+    "    \n",
+    "    public static void main(String args[]){\n",
+    "        \n",
+    "        int array[]={0,1,2,3,4,5,6,7,8,9};\n",
+    "    \n",
+    "        for(int element:array){\n",
+    "            System.out.println(element);\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\r\n",
       "1\r\n",
       "2\r\n",
       "3\r\n",
@@ -38,14 +69,42 @@
       "6\r\n",
       "7\r\n",
       "8\r\n",
-      "9\r\n",
-      "10\r\n"
+      "9\r\n"
      ]
     }
    ],
    "source": [
     "!javac EnhancedDoLoopTest.java\n",
     "!java EnhancedDoLoopTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for element in range(10):\n",
+    "    print element"
    ]
   },
   {
