--- a/BDSE03-Vortrag-HighlightedCodes.ipynb
+++ b/BDSE03-Vortrag-HighlightedCodes.ipynb
@@ -79,32 +79,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "```python\n",
     "for element in range(10):\n",
-    "    print element"
+    "    print element\n",
+    "```"
    ]
   },
   {
