some examples are added

--- a/BASH.ipynb
+++ b/BASH.ipynb
@@ -3018,6 +3018,861 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 16112016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell is the content of the script testPS.sh:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```BASH\n",
+    "#!/bin/bash\n",
+    "ps -f\n",
+    "#read\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we execute it:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```BASH\n",
+    "chweng@chweng-VirtualBox:~/code/exercises$ ./testPS.sh \n",
+    "UID        PID  PPID  C STIME TTY          TIME CMD\n",
+    "chweng    9960  2374  0 16:26 pts/31   00:00:00 bash\n",
+    "chweng    9974  9960  0 16:26 pts/31   00:00:00 /bin/bash ./testPS.sh\n",
+    "chweng    9975  9974  0 16:26 pts/31   00:00:00 ps -f\n",
+    "\n",
+    "chweng@chweng-VirtualBox:~/code/exercises$ source testPS.sh \n",
+    "UID        PID  PPID  C STIME TTY          TIME CMD\n",
+    "chweng    9960  2374  0 16:26 pts/31   00:00:00 bash\n",
+    "chweng    9980  9960  0 16:26 pts/31   00:00:00 ps -f\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```BASH\n",
+    "chweng@chweng-VirtualBox:~$ var1=1111\n",
+    "chweng@chweng-VirtualBox:~$ var2=3333\n",
+    "\n",
+    "chweng@chweng-VirtualBox:~$ echo \"${var1}222\"\n",
+    "1111222\n",
+    "\n",
+    "chweng@chweng-VirtualBox:~$ set | grep \"var1\"\n",
+    "var1=1111\n",
+    "chweng@chweng-VirtualBox:~$ set | grep \"var2\"\n",
+    "var2=3333\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```BASH\n",
+    "chweng@chweng-VirtualBox:~$ bash\n",
+    "chweng@chweng-VirtualBox:~$ echo $var1\n",
+    "111\n",
+    "chweng@chweng-VirtualBox:~$ echo $var2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "chweng@chweng-VirtualBox:~$ set |grep \"var1\"\n",
+    "var1=1111\n",
+    "chweng@chweng-VirtualBox:~$ set |grep \"var2\"\n",
+    "var2=3333\n",
+    "\n",
+    "chweng@chweng-VirtualBox:~$ env |grep \"var1\"\n",
+    "chweng@chweng-VirtualBox:~$ env |grep \"var2\"\n",
+    "var2=3333\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some examples that uses BASH variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of var1=12345 is 5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "var=12345\n",
+    "echo \"The length of var1=$var is ${#var}.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "328M,/home/chweng\n",
+      "328M\n",
+      "\n",
+      "/dev/mapper/ubuntu--vg-root,992G\n",
+      "992G\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "set $(eval du -sh ~$user);dir_sz=$1\n",
+    "echo \"$1,$2\"\n",
+    "echo \"${dir_sz}\"\n",
+    "\n",
+    "echo \"\"\n",
+    "\n",
+    "set $(eval df -h|grep \" /$\");fs_sz=$2\n",
+    "echo \"$1,$2\"\n",
+    "echo \"${fs_sz}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of my home directory is 328M.\n",
+      "size of my file system size is 992G.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "set $(eval du -sh ~$user);dir_sz=$1\n",
+    "set $(eval df -h|grep \" /$\");fs_sz=$2\n",
+    "echo \"Size of my home directory is ${dir_sz}.\"\n",
+    "echo \"Size of my file system size is ${fs_sz}.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In BASH, a line is excuted successfully if the exit status is 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    ":\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ls: cannot access '/dhuoewyr242q': No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "ls /dhuoewyr242q\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "true\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "false\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=0\n",
+      "\n",
+      "exit status=0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "value=123\n",
+    "test $value==\"123\"\n",
+    "echo \"exit status=$?\"\n",
+    "echo\"\"\n",
+    "test $value==\"456\"\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above result is wrong. it's necessary to wrap == with SPACES, as the follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=0\n",
+      "\n",
+      "exit status=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "value=123\n",
+    "test $value == \"123\"\n",
+    "echo \"exit status=$?\"\n",
+    "echo\"\"\n",
+    "test $value == \"456\"\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### the command test can be replaced by its synonym [ ]:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[: [ arg... ]\n",
+      "    Evaluate conditional expression.\n",
+      "    \n",
+      "    This is a synonym for the \"test\" builtin, but the last argument must\n",
+      "    be a literal `]', to match the opening `['.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "help ["
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=0\n",
+      "\n",
+      "exit status=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "value=123\n",
+    "[ $value == \"123\" ]\n",
+    "echo \"exit status=$?\"\n",
+    "echo\"\"\n",
+    "[ $value == \"456\" ]\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit status=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "/usr/bin/[ 0 == 1 ]\n",
+    "echo \"exit status=$?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### example: ex4-4.sh:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password file exists.\n",
+      "15 is not equal to 017\n",
+      "15 equals 017\n",
+      "15 equals 0x0f\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "#!/bin/bash\n",
+    "# using [ and [[\n",
+    "\n",
+    "file=/etc/passwd\n",
+    "\n",
+    "if [[ -e $file ]]\n",
+    "then\n",
+    "        echo \"Password file exists.\"\n",
+    "fi\n",
+    "\n",
+    "# [[ Octal and hexadecimal evaluation ]]\n",
+    "# Thank you, Moritz Gronbach, for pointing this out.\n",
+    "\n",
+    "decimal=15\n",
+    "octal=017       # = 15 (decimal)\n",
+    "hex=0x0f        # = 15 (decimal)\n",
+    "\n",
+    "if [ \"$decimal\" -eq \"$octal\" ]\n",
+    "then\n",
+    "        echo \"$decimal equals $octal\"\n",
+    "else\n",
+    "        echo \"$decimal is not equal to $octal\" # 15 is not equal to 017\n",
+    "fi      # Doesn't evaluate within [ single brackets ]!\n",
+    "\n",
+    "if [[ \"$decimal\" -eq \"$octal\" ]]\n",
+    "then\n",
+    "        echo \"$decimal equals $octal\" # 15 equals 017\n",
+    "else\n",
+    "        echo \"$decimal is not equal to $octal\"\n",
+    "fi      # Evaluates within [[ double brackets ]]!\n",
+    "\n",
+    "if [[ \"$decimal\" -eq \"$hex\" ]]\n",
+    "then\n",
+    "        echo \"$decimal equals $hex\" # 15 equals 0x0f\n",
+    "else\n",
+    "        echo \"$decimal is not equal to $hex\"\n",
+    "fi      # [[ $hexadecimal ]] also evaluates!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### example: ex4-4.sh:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir /home/chweng/a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!touch /home/chweng/a/123.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backup directory ~/b...\n",
+      "Source directory ~/a...\n",
+      "Backup done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#!/bin/bash\n",
+    "# using file test operator\n",
+    "\n",
+    "DEST=\"~/b\"\n",
+    "SRC=\"~/a\"\n",
+    "\n",
+    "# Make sure backup dir exits\n",
+    "if [ ! -d $DEST ]\n",
+    "then\n",
+    "        mkdir -p $DEST\n",
+    "fi\n",
+    "\n",
+    "# If source directory does not exits, die...\n",
+    "if [ ! -d $SRC ]\n",
+    "then\n",
+    "        echo \"$SRC directory not found. Cannot make backup to $DEST\"\n",
+    "        exit 1\n",
+    "fi\n",
+    "\n",
+    "# Okay, dump backup using tar\n",
+    "echo \"Backup directory $DEST...\"\n",
+    "echo \"Source directory $SRC...\"\n",
+    "/bin/tar -Jcf $DEST/backup.tar.xz $SRC 2>/dev/null\n",
+    "\n",
+    "# Find out if backup failed or not\n",
+    "if [ $? -eq 0 ] \n",
+    "then\n",
+    "        echo \"Backup done!\"\n",
+    "else\n",
+    "        echo \"Backup failed\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### See if an integer A is greater equal than another integer B:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 >= 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "i=5\n",
+    "if [ $i -ge 0 ];then echo \"$i >= 0\";fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "alternatively, one can write it like this (with the help of )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 >= 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "i=5\n",
+    "if (($i >= 0));then echo \"$i >= 0\";fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 2: [: 05: unary operator expected\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "i=5\n",
+    "if [ $i >= 0 ];then echo \"$i >= 0\";fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05 >= 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "i=05\n",
+    "if [ $i > 0 ];then echo \"$i >= 0\";fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm not sure what's the difference between > and ge in BASH."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### arithmatic calculations are enclosed by (()):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "echo $((7**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "echo $((7%3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Mount Points:\n",
+      "/\n",
+      "/boot\n",
+      "There is 94.34% available in /home\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#!/bin/bash\n",
+    "# calculate the available % of disk space\n",
+    "\n",
+    "echo \"Current Mount Points:\"\n",
+    "mount | grep -E 'ext[234]|xfs' | cut -f 3 -d ' ' \n",
+    "\n",
+    "#read -p \"Enter a Mount Point: \" mntpnt\n",
+    "mntpnt=\"/home\"\n",
+    "\n",
+    "sizekb=$(df $mntpnt | tail -1 | tr -s ' ' | cut -f 2 -d ' ')\n",
+    "availkb=$(df $mntpnt | tail -1 | tr -s ' ' | cut -f 4 -d ' ')\n",
+    "\n",
+    "availpct=$(echo \"scale=4; $availkb/$sizekb * 100\" | bc)\n",
+    "\n",
+    "printf \"There is %5.2f%% available in %s\\n\" $availpct $mntpnt\n",
+    "\n",
+    "exit 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another code which do exactly the same thing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Mount Points:\n",
+      "/\n",
+      "/boot\n",
+      "There is 94.34% available in /home\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#!/bin/bash\n",
+    "# calculate the available % of disk space\n",
+    "\n",
+    "echo \"Current Mount Points:\"\n",
+    "mount | egrep 'ext[234]|xfs' | cut -f 3 -d ' ' \n",
+    "\n",
+    "#read -p \"Enter a Mount Point: \" mntpnt\n",
+    "mntpnt=\"/home\"\n",
+    "\n",
+    "df_out=\"$(df $mntpnt | tail -1)\"\n",
+    "\n",
+    "set $df_out\n",
+    "\n",
+    "availpct=$(echo \"scale=4; ${4}/${2} * 100\" | bc)\n",
+    "\n",
+    "printf \"There is %5.2f%% available in %s\\n\" $availpct $mntpnt\n",
+    "\n",
+    "exit 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Double -4 is: -8\n",
+      " Half of -4 is: -2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "#!/bin/bash\n",
+    "# shift left is double, shift right is half\n",
+    "\n",
+    "declare -i number\n",
+    "\n",
+    "#read -p \"Enter a number: \" number\n",
+    "number=-4\n",
+    "\n",
+    "echo \" Double $number is: $((number << 1))\"\n",
+    "echo \" Half of $number is: $((number >> 1))\"\n",
+    "\n",
+    "exit 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "therefore, it is arithmatic shift in the above script."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
