--- a/BASH.ipynb
+++ b/BASH.ipynb
@@ -3091,10 +3091,11 @@
    "metadata": {},
    "source": [
     "```BASH\n",
-    "chweng@chweng-VirtualBox:~$ bash\n",
-    "chweng@chweng-VirtualBox:~$ echo $var1\n",
-    "111\n",
-    "chweng@chweng-VirtualBox:~$ echo $var2\n",
+    "chweng@chweng-VirtualBox:$ export var1\n",
+    "chweng@chweng-VirtualBox:$ bash\n",
+    "chweng@chweng-VirtualBox:$ echo $var1\n",
+    "1111\n",
+    "chweng@chweng-VirtualBox:$ echo $var2\n",
     "```"
    ]
   },
@@ -3454,6 +3455,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use the advanced-test:[[]]\n",
+    "    \n",
+    "to compare different integer strings in different forms (it could be that one in decimal and another in octal format)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
@@ -3673,7 +3683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -3689,14 +3699,7 @@
    "source": [
     "%%bash\n",
     "i=05\n",
-    "if [ $i > 0 ];then echo \"$i >= 0\";fi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I'm not sure what's the difference between > and ge in BASH."
+    "if [ $i -ge 0 ];then echo \"$i >= 0\";fi"
    ]
   },
   {
@@ -3816,7 +3819,7 @@
     "# calculate the available % of disk space\n",
     "\n",
     "echo \"Current Mount Points:\"\n",
-    "mount | egrep 'ext[234]|xfs' | cut -f 3 -d ' ' \n",
+    "mount | egrep 'ext[234]|xfs' | cut -f 3 -d ' ' # -f: field; -d:delimiter\n",
     "\n",
     "#read -p \"Enter a Mount Point: \" mntpnt\n",
     "mntpnt=\"/home\"\n",
@@ -3929,13 +3932,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### switch case"
+   ]
   },
   {
    "cell_type": "code",
@@ -4025,7 +4026,7 @@
     "        *) echo \"Only choices 1, 2, 3 or q are valid\" ;;\n",
     "esac\n",
     "\n",
-    "exit\n"
+    "exit"
    ]
   },
   {
@@ -4033,6 +4034,13 @@
    "metadata": {},
    "source": [
     "in the above example, \\$(pwd) can be replaced by $PWD if the env variable PWD exists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  the \"for each\" loop"
    ]
   },
   {
@@ -4096,7 +4104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### another way to create a loop, as what people normally use in Java:"
+    "#### another way to create a loop, as what people normally do in Java:"
    ]
   },
   {
@@ -4146,7 +4154,7 @@
    "source": [
     "review: when to use the enhanced-test [[ ]]? \n",
     "\n",
-    "#### when && or || operator is used"
+    "#### A: when && or || operator is used"
    ]
   },
   {
@@ -4191,13 +4199,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### while loop:"
+   ]
   },
   {
    "cell_type": "code",
@@ -4390,15 +4396,6 @@
     "done\n",
     "exit 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4603,15 +4600,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "metadata": {
     "collapsed": false
@@ -4716,15 +4704,6 @@
     "\n",
     "exit"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4906,13 +4885,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "queried"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -5013,22 +4985,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### awk:"
+   ]
   },
   {
    "cell_type": "code",
@@ -5099,42 +5060,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "                                                                                #which semicolons separate actions\n",
+    "```bash\n",
+    "1. ls -al /etc | awk '$1 ~ /^d/ {print \"dir: \",$9}'\n",
     "\n",
-    "Example 2: Combine with other command\n",
+    "2. ll /etc | awk '$1 ~ /^d/ && $9 !~ /^\\./ {print \"dir: \",$9}'\n",
     "\n",
-    "ls -l | awk '{ print $1 , $9 }'\n",
+    "3. ll /sbin |awk '/^-/ && $2 > 1 {print \"file:\",$9 \"\\t links: \",$2}'\n",
     "\n",
-    "df | awk '{print $1,\"-->\",$6}'\n",
+    "4. cat /etc/services | awk '$1 == \"ssh\" {print \"service: \",$1,$2}'\n",
     "\n",
-    "ps | awk '{print \"PID: \" $1, $4}'\n",
+    "5. ss -an | awk '/^ESTAB/ && $4 ~ /:22$/ {print \"ssh from:\",$5}'\n",
     "\n",
+    "6. mount | awk '$5 ~ /ext[234]/ || $5 == \"xfs\" {print $3,\"(\"$5\")\"}'\n",
     "\n",
-    "Example 3:\n",
-    "\n",
-    "awk ' { print \"\" ; print $0 }' lastfile\n",
-    "#two lines\n",
-    "\n",
-    "awk ' { print $1 $3 }' lastfile\n",
-    "#continuous output\n",
-    "\n",
-    "awk ' { print $1 , $3 }' lastfile\n",
-    "#separate by one space\n",
-    "\n",
-    "awk ' { print $1 \"\\t\\t\" $3 }' lastfile\n",
-    "#separate by two [TAB]s\n",
-    "\n",
-    "awk '{print $1,\"logged in:\",$5,$4,\"on\",$2,\"(user\",$1\")\"}' lastfile\n",
-    "#reorder fields\n",
-    "\n",
-    "~                 "
+    "7. ps -ef | awk '$2 == 1 , $2 == 10 {print}'\n",
+    "```"
    ]
   },
   {
@@ -5546,15 +5489,6 @@
     "echo \"This is a book\" | awk '\n",
     "   { print \"length of the string : \",$0,\" is : \",length($0) }'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
