I've cleaned this notebook a bit

--- a/BASH.ipynb
+++ b/BASH.ipynb
@@ -1211,7 +1211,7 @@
     "\n",
     "?: showing once or 0 times\n",
     "\n",
-    "*: showing any times (including 0 times)\n",
+    "*: showing for any times (including 0 times)\n",
     "\n",
     "+: showing at least once"
    ]
@@ -3021,7 +3021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 16112016"
+    "#### 16.11.2016"
    ]
   },
   {
@@ -3102,18 +3102,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "```bash\n",
-    "chweng@chweng-VirtualBox:~$ set |grep \"var1\"\n",
-    "var1=1111\n",
-    "chweng@chweng-VirtualBox:~$ set |grep \"var2\"\n",
-    "var2=3333\n",
-    "\n",
-    "chweng@chweng-VirtualBox:~$ env |grep \"var1\"\n",
-    "chweng@chweng-VirtualBox:~$ env |grep \"var2\"\n",
-    "var2=3333\n",
-    "```"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4159,7 +4148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
